--- a/site-conf.cls
+++ b/site-conf.cls
@@ -77,7 +77,7 @@
 \section{\@startsection{section}{1}{\z@}%
   {-3.5ex \@plus -1ex \@minus -.2ex}%
   {2.3ex \@plus.2ex}%
-{\normalfont\large\bfseries\centering}}
+{\normalfont\large\bfseries\scshape\centering}}
 
 \renewcommand
 \subsection{\@startsection{subsection}{2}{\z@}%
