keyword: fr -> en

--- a/main.tex
+++ b/main.tex
@@ -6,8 +6,8 @@
 \author{
   \begin{tabular}{ccc}
     \name{Author 1} & \name{Author 2} & \name{Author 3} \\
-    \departement{Department Name} & \departement{Department Name} &
-    \departement{Department Name}\\
+    \department{Department Name} & \department{Department Name} &
+    \department{Department Name}\\
     \university{University Name} & \university{University Name} &
     \university{University Name} \\
     \email{email@email.email} & \email{email@email.email} &
